--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=CryptoWsClient
+# Artemis settings
+spring.artemis.embedded.enabled=true
+spring.artemis.mode=native
+spring.artemis.broker-url=tcp://localhost:61616
+spring.artemis.user=admin
+spring.artemis.password=admin
+
+# Optional logging
+logging.level.com.example.cryptows=DEBUG
