--- a/src/main/angular/angular.json
+++ b/src/main/angular/angular.json
@@ -36,7 +36,10 @@
               "./node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "scripts": [
-              "./node_modules/bootstrap/dist/js/bootstrap.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.js",
+              "./node_modules/highcharts/highcharts.js",
+              "./node_modules/highcharts/themes/adaptive.js"
+
             ]
           },
           "configurations": {
