--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -22,6 +22,8 @@
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "font-awesome": "^4.7.0",
+    "highcharts": "^12.3.0",
+    "highcharts-angular": "^5.1.0",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
