--- a/src/main/angular/angular.json
+++ b/src/main/angular/angular.json
@@ -37,6 +37,7 @@
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "./node_modules/highcharts/highcharts.js",
               "./node_modules/highcharts/themes/adaptive.js"
 
