--- a/src/main/angular/package.json
+++ b/src/main/angular/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^19.2.0",
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@stomp/stompjs": "^7.1.1",
+    "angular-highcharts": "^17.0.1",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "font-awesome": "^4.7.0",
