--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
             <artifactId>commons-codec</artifactId>
             <version>1.19.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.ta4j</groupId>
+            <artifactId>ta4j-core</artifactId>
+            <version>0.17</version>
+        </dependency>
     </dependencies>
 
     <build>
