--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,12 @@
             <artifactId>ta4j-core</artifactId>
             <version>0.17</version>
         </dependency>
+
+        <dependency>
+            <groupId>javazoom</groupId>
+            <artifactId>jlayer</artifactId>
+            <version>1.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
